Let github CI install expyre and universalSOAP automatically as dependencies

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -44,13 +44,7 @@ jobs:
       - name: Install Quippy from PyPI
         run: pip install quippy-ase
 
-      - name: Install ExPyRe from github
-        run: pip install git+https://github.com/libAtoms/ExPyRe
-
-      - name: Install universalSOAP from github
-        run: pip install git+https://github.com/libAtoms/universalSOAP
-
-      - name: Install wfl
+      - name: Install wfl (expyre and universalSOAP are dependencies)
         run: pip install .
 
       - name: Install Quantum Espresso
