--- a/.github/workflows/quippy-tests.yml
+++ b/.github/workflows/quippy-tests.yml
@@ -26,10 +26,7 @@ jobs:
           #           mpi4py pytest-mpi
           # pip install git+https://github.com/mpipool/mpipool
 
-          pip install git+https://github.com/libAtoms/ExPyRe
-          pip install git+https://github.com/libAtoms/universalSOAP
-
-          # install dev version of ASE
+          # install wfl (expyre and universalSOAP are dependencies)
           pip install .
 
       - name: Lint with flake8
