added automatic docummentation on github

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  install-and-run-pytest:
+  build-and-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -97,3 +97,22 @@ jobs:
           name: coverage-html-${{ matrix.python-version }}
           path: coverage-html/
           retention-days: 7
+
+
+  build-docs
+    runs-on: ubuntu-latest
+    needs: build-and-test  
+
+    steps: 
+      - uses: actions/checkout@v2
+
+      - name: Build documentation
+        run: |
+          pip install sphinx sphinx-book-theme docutils==0.16 sphinx-click 
+          cd docs
+          make html
+      - name: Deploy documentation
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/build/html 
