--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -39,7 +39,7 @@ jobs:
         run: conda install pip
 
       - name: Install phono3py from Conda forge
-        run: conda install -c conda-forge phono3py
+        run: conda install -c conda-forge phono3py h5py
 
       - name: Install dependencies from pip (some will already be taken care of by conda's phonop3py and its dependencies)
         run: pip install wheel setuptools ase numpy scipy click matplotlib pandas pyyaml spglib phonopy phono3py rdkit-pypi flake8 pytest pytest-cov
