Upgrade jinja2 in gihub actions docs build

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -112,6 +112,7 @@ jobs:
       - name: Build documentation
         run: |
           pip install sphinx sphinx-book-theme docutils==0.16 sphinx-click 
+          pip install --upgrade jinja2
           cd docs
           make html
       - name: Deploy documentation
