--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -111,7 +111,7 @@ jobs:
 
       - name: Build documentation
         run: |
-          pip install sphinx sphinx-book-theme docutils==0.16 sphinx-click 
+          pip install sphinx sphinx-book-theme docutils==0.16 sphinx-click myst-parser
           pip install --upgrade jinja2
           cd docs
           make html
