--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -50,10 +50,23 @@ jobs:
       - name: Install wfl (expyre and universalSOAP are dependencies)
         run: pip install .
 
-      - name: Install Quantum Espresso
+      - name: Update apt-get for various later package instralls
         run: |
           sudo apt-get update
+
+      - name: Install Quantum Espresso
+        run: |
           sudo apt-get install --no-install-recommends quantum-espresso
+
+      - name: Install buildcell
+        run: |
+          sudo apt-get install gfortran
+          wget https://www.mtg.msm.cam.ac.uk/system/files/documents/airss-0.9.1.tgz
+          tar xzf airss-0.9.1.tgz
+          cd airss-0.9.1
+          make buildcell
+          mkdir -p $HOME/bin
+          cp src/buildcell/src/buildcell $HOME/bin/
 
       - name: Install MPI dependencies
         if: env.use-mpi
@@ -93,6 +106,9 @@ jobs:
         run: |
           rm -rf $HOME/pytest_plain
           mkdir $HOME/pytest_plain
+          #
+          export EXPYRE_PYTEST_SYSTEMS=github
+          export WFL_PYTEST_BUILDCELL=$HOME/buildcell
           pytest --runremote --basetemp $HOME/pytest_plain -rxXs
 
       - name: Test with pytest - coverage
@@ -100,7 +116,10 @@ jobs:
         run: |
           rm -rf $HOME/pytest_cov
           mkdir $HOME/pytest_cov
-          env EXPYRE_PYTEST_SYSTEMS=github pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs
+          #
+          export EXPYRE_PYTEST_SYSTEMS=github
+          export WFL_PYTEST_BUILDCELL=$HOME/buildcell
+          pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs
 
       - name: MPI tests -- plain
         if: ${{ env.use-mpi && env.coverage-on-version != matrix.python-version}}
@@ -125,11 +144,11 @@ jobs:
           retention-days: 7
 
 
-  build-docs: 
+  build-docs:
     runs-on: ubuntu-latest
-    needs: build-and-test  
+    needs: build-and-test
 
-    steps: 
+    steps:
       - uses: actions/checkout@v2
 
       - name: Build documentation
@@ -142,4 +161,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/build/html 
+          publish_dir: docs/build/html
