--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -108,7 +108,7 @@ jobs:
           mkdir $HOME/pytest_plain
           #
           export EXPYRE_PYTEST_SYSTEMS=github
-          export WFL_PYTEST_BUILDCELL=$HOME/buildcell
+          export WFL_PYTEST_BUILDCELL=$HOME/bin/buildcell
           pytest --runremote --basetemp $HOME/pytest_plain -rxXs
 
       - name: Test with pytest - coverage
@@ -118,7 +118,7 @@ jobs:
           mkdir $HOME/pytest_cov
           #
           export EXPYRE_PYTEST_SYSTEMS=github
-          export WFL_PYTEST_BUILDCELL=$HOME/buildcell
+          export WFL_PYTEST_BUILDCELL=$HOME/bin/buildcell
           pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs
 
       - name: MPI tests -- plain
