--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -110,7 +110,7 @@ jobs:
           export EXPYRE_PYTEST_SYSTEMS=github
           export WFL_PYTEST_BUILDCELL=$HOME/bin/buildcell
           export WFL_NUM_PYTHON_SUBPROCESSES=2
-          export OMP_NUM_THREADS=1
+          # export OMP_NUM_THREADS=1
           pytest --runremote --basetemp $HOME/pytest_plain -rxXs
 
       - name: Test with pytest - coverage
@@ -122,7 +122,7 @@ jobs:
           export EXPYRE_PYTEST_SYSTEMS=github
           export WFL_PYTEST_BUILDCELL=$HOME/bin/buildcell
           export WFL_NUM_PYTHON_SUBPROCESSES=2
-          export OMP_NUM_THREADS=1
+          # export OMP_NUM_THREADS=1
           pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs
 
       - name: MPI tests -- plain
@@ -131,7 +131,7 @@ jobs:
           # envvar and test run - No coverage
           export WFL_MPIPOOL=2
           export WFL_NUM_PYTHON_SUBPROCESSES=2
-          export OMP_NUM_THREADS=1
+          # export OMP_NUM_THREADS=1
           mpirun -n 2 pytest --with-mpi -k mpi
 
       - name: MPI tests -- coverage
@@ -140,7 +140,7 @@ jobs:
           # envvar and coverage Appended to the previous
           export WFL_MPIPOOL=2
           export WFL_NUM_PYTHON_SUBPROCESSES=2
-          export OMP_NUM_THREADS=1
+          # export OMP_NUM_THREADS=1
           mpirun -n 2 pytest --cov=wfl --cov-report term --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --with-mpi -k mpi --cov-append
 
       - name: 'Upload Coverage Data'
