--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -125,7 +125,7 @@ jobs:
           # export OMP_NUM_THREADS=1
           echo "BOB"
           env | grep OMP_NUM_THREADS || echo none
-          pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs tests/test_remote_run.py
+          pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs -s tests/test_remote_run.py
 
       - name: MPI tests -- plain
         if: ${{ env.use-mpi && env.coverage-on-version != matrix.python-version}}
