ssh in github CI if pytest takes too long

--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -125,7 +125,16 @@ jobs:
           # export OMP_NUM_THREADS=1
           echo "BOB"
           env | grep OMP_NUM_THREADS || echo none
-          pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs -s tests/test_remote_run.py
+          pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs -s tests/test_remote_run.py &
+          sleep 120
+          if jobs | wc -l | grep -qv 0; then
+            exit 1
+          fi
+
+      - name: Setup tmate session
+        if: failure()
+        uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 15
 
       - name: MPI tests -- plain
         if: ${{ env.use-mpi && env.coverage-on-version != matrix.python-version}}
