--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -121,7 +121,7 @@ jobs:
           export EXPYRE_PYTEST_SYSTEMS=github
           export WFL_PYTEST_BUILDCELL=$HOME/bin/buildcell
           export WFL_NUM_PYTHON_SUBPROCESSES=2
-          export OMP_NUM_THREADS=1
+          # export OMP_NUM_THREADS=1
           pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs -s tests/test_calc_descriptor.py &
           sleep 30
           if jobs | wc -l | grep -qv 0; then
