--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -41,10 +41,12 @@ jobs:
       - name: Install h5py from Conda forge (will be needed by phono3py)
         run: |
           conda install -c conda-forge h5py
-          python3 -c "import h5py"
+          python3 -c "import h5py; print(h5py.__file__)"
 
       - name: Install phono3py from Conda forge
-        run: conda install -c conda-forge phono3py h5py
+        run: |
+          conda install -c conda-forge phono3py h5py
+          python3 -c "import phono3py; print(phono3py.__file__)"
 
       - name: Install dependencies from pip (some will already be taken care of by conda's phonop3py and its dependencies)
         run: pip install wheel setuptools ase numpy scipy click matplotlib pandas pyyaml spglib phonopy phono3py rdkit-pypi flake8 pytest pytest-cov
