--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Install phono3py from Conda forge
         run: |
           conda install -c conda-forge phono3py h5py
+          conda list
           python3 -c "import phono3py; print(phono3py.__file__)"
 
       - name: Install dependencies from pip (some will already be taken care of by conda's phonop3py and its dependencies)
