--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -47,6 +47,7 @@ jobs:
         run: |
           conda install -c conda-forge phono3py h5py
           conda list
+          conda info
           python3 -c "import phono3py; print(phono3py.__file__)"
 
       - name: Install dependencies from pip (some will already be taken care of by conda's phonop3py and its dependencies)
