--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -41,13 +41,19 @@ jobs:
       - name: Install h5py from Conda forge (will be needed by phono3py)
         run: |
           conda install -c conda-forge h5py=3.7.0
+          echo "import h5py"
           python3 -c "import h5py; print(h5py.__file__)"
 
       - name: Install phono3py from Conda forge
         run: |
           conda install -c conda-forge phono3py h5py
+          echo "conda list"
           conda list
+          echo "conda info"
           conda info
+          echo "import h5py"
+          python3 -c "import h5py; print(h5py.__file__)"
+          echo "import phono3py"
           python3 -c "import phono3py; print(phono3py.__file__)"
 
       - name: Install dependencies from pip (some will already be taken care of by conda's phonop3py and its dependencies)
