--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -68,6 +68,14 @@ jobs:
       - name: Install Quippy from PyPI
         run: pip install quippy-ase
 
+      - name: Julia and ace fit
+        run: |
+          wget https://julialang-s3.julialang.org/bin/linux/x64/1.8/julia-1.8.1-linux-x86_64.tar.gz
+          tar xzf julia-1.8.1-linux-x86_64.tar.gz
+          export WFL_JULIA_COMMAND=${PWD}/julia-1.8.1/bin/julia
+          echo 'using Pkg; Pkg.activate("."); pkg"registry add https://github.com/JuliaRegistries/General"; pkg"registry add https://github.com/JuliaMolSim/MolSim.git"; pkg"add ACE1pack, ACE1, JuLIP, IPFitting, ASE"' > ace1pack_install.jl
+          ${WFL_JULIA_COMMAND} ace1pack_install.jl
+
       - name: Install wfl (expyre and universalSOAP are dependencies)
         run: pip install .
 
@@ -128,7 +136,7 @@ jobs:
           export WFL_PYTEST_BUILDCELL=$HOME/bin/buildcell
           export WFL_NUM_PYTHON_SUBPROCESSES=2
           export OMP_NUM_THREADS=1
-          pytest --runremote --basetemp $HOME/pytest_plain -rxXs
+          pytest --runremote --runacefit --basetemp $HOME/pytest_plain -rxXs
 
       - name: Test with pytest - coverage
         if: env.coverage-on-version == matrix.python-version
@@ -140,7 +148,7 @@ jobs:
           export WFL_PYTEST_BUILDCELL=$HOME/bin/buildcell
           export WFL_NUM_PYTHON_SUBPROCESSES=2
           export OMP_NUM_THREADS=1
-          pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs
+          pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --runacefit --basetemp $HOME/pytest_cov -rxXs
 
       # - name: Setup tmate session
       #   if: failure()
