--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -73,7 +73,8 @@ jobs:
           wget https://julialang-s3.julialang.org/bin/linux/x64/1.8/julia-1.8.1-linux-x86_64.tar.gz
           tar xzf julia-1.8.1-linux-x86_64.tar.gz
           export WFL_JULIA_COMMAND=${PWD}/julia-1.8.1/bin/julia
-          echo 'using Pkg; Pkg.activate("."); pkg"registry add https://github.com/JuliaRegistries/General"; pkg"registry add https://github.com/JuliaMolSim/MolSim.git"; pkg"add ACE1pack, ACE1, JuLIP, IPFitting, ASE"' > ace1pack_install.jl
+          # note that this hardwires a particular compatible ACE1pack version
+          echo 'using Pkg; Pkg.activate("."); pkg"registry add https://github.com/JuliaRegistries/General"; pkg"registry add https://github.com/JuliaMolSim/MolSim.git"; pkg"add ACE1pack@0.0, ACE1, JuLIP, IPFitting, ASE"' > ace1pack_install.jl
           ${WFL_JULIA_COMMAND} ace1pack_install.jl
 
       - name: Install wfl (expyre and universalSOAP are dependencies)
