--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -72,15 +72,10 @@ jobs:
         run: |
           wget https://julialang-s3.julialang.org/bin/linux/x64/1.8/julia-1.8.1-linux-x86_64.tar.gz
           tar xzf julia-1.8.1-linux-x86_64.tar.gz
-          export WFL_JULIA_COMMAND=${PWD}/julia-1.8.1/bin/julia
           # note that this hardwires a particular compatible ACE1pack version
           echo 'using Pkg; Pkg.activate("."); pkg"registry add https://github.com/JuliaRegistries/General"; pkg"registry add https://github.com/JuliaMolSim/MolSim.git"; pkg"add ACE1pack@0.0, ACE1, JuLIP, IPFitting, ASE"' > ace1pack_install.jl
-          ${WFL_JULIA_COMMAND} ace1pack_install.jl
-          cp Project.toml ${HOME}
-          echo -n "BOB pwd "
-          pwd
-          echo -n "BOB ls -al "
-          ls -al
+          ${PWD}/julia-1.8.1/bin/julia ace1pack_install.jl
+          mv Project.toml ${HOME}
 
       - name: Install wfl (expyre and universalSOAP are dependencies)
         run: pip install .
@@ -144,6 +139,7 @@ jobs:
           export WFL_NUM_PYTHON_SUBPROCESSES=2
           export OMP_NUM_THREADS=1
           export WFL_JULIA_COMMAND=${PWD}/julia-1.8.1/bin/julia
+          export JULIA_PROJECT=${HOME}
           pytest --runremote --basetemp $HOME/pytest_plain -rxXs
 
       - name: Test with pytest - coverage
@@ -157,6 +153,7 @@ jobs:
           export WFL_NUM_PYTHON_SUBPROCESSES=2
           export OMP_NUM_THREADS=1
           export WFL_JULIA_COMMAND=${PWD}/julia-1.8.1/bin/julia
+          export JULIA_PROJECT=${HOME}
           pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs
 
       # - name: Setup tmate session
