--- a/examples/organic_reactions/CHO_methane_burning/config.json
+++ b/examples/organic_reactions/CHO_methane_burning/config.json
@@ -18,7 +18,7 @@
       "r_min": 0.2,
       "inclusion_energy_upper_limit": -1.0
     },
-    "vibrations": {
+    "NormalModes": {
       "n_free": 2,
       "num_per_mode": 4
     }
