Automatically make docs/source/wfl*rst files in Makefile, and rename '.md.rst' file to avoid sphinx bug

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -19,4 +19,7 @@ export PYTHONPATH := $(PWD)/..:$(PYTHONPATH)
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
 %: Makefile
+	sphinx-apidoc -o source ../wfl
+	mv source/wfl.generate.md.rst source/wfl.generate.md_PROTECT.rst
+	sed -i -e 's/wfl.generate.md/wfl.generate.md_PROTECT/' source/wfl.generate.rst
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
