--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -153,10 +153,10 @@ jobs:
           export WFL_JULIA_COMMAND=${PWD}/julia-1.8.1/bin/julia
           pytest -v --cov=wfl --cov-report term --cov-report html --cov-config=tests/.coveragerc --cov-report term-missing --cov-report term:skip-covered --runremote --basetemp $HOME/pytest_cov -rxXs
 
-      - name: Setup tmate session
-        if: failure()
-        uses: mxschmitt/action-tmate@v3
-        timeout-minutes: 15
+      # - name: Setup tmate session
+          # if: failure()
+          # uses: mxschmitt/action-tmate@v3
+          # timeout-minutes: 15
 
       - name: MPI tests -- plain
         if: ${{ env.use-mpi && env.coverage-on-version != matrix.python-version}}
