--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -83,6 +83,10 @@ jobs:
         run: |
           sudo apt-get install --no-install-recommends quantum-espresso
 
+      - name: Install MOPAC
+        run: |
+          conda install -c conda-forge mopac
+
       - name: Install buildcell
         run: |
           sudo apt-get install gfortran
