--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -94,7 +94,10 @@ jobs:
         run: |
           wget https://github.com/openmopac/mopac/releases/download/v22.0.6/mopac-22.0.6-linux.tar.gz
           tar -xzvf mopac-22.0.6-linux.tar.gz
-          export PATH=$PATH:mopac-22.0.6-linux/bin
+          export PATH=$PATH:`pwd`/mopac-22.0.6-linux/bin
+
+      - name: check mopac path
+        run: which mopac
 
       - name: Install buildcell
         run: |
