--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -38,9 +38,6 @@ jobs:
       - name: Install pip from Conda
         run: conda install pip
 
-      - name: Check which pip
-        run: which pip
-
       - name: Install dependencies from pip (some will already be taken care of by conda's phonop3py and its dependencies)
         run: pip install wheel setuptools numpy scipy click matplotlib pandas pyyaml spglib rdkit-pypi flake8 pytest pytest-cov
 
@@ -94,9 +91,9 @@ jobs:
         run: |
           wget https://github.com/openmopac/mopac/releases/download/v22.0.6/mopac-22.0.6-linux.tar.gz
           tar -xzvf mopac-22.0.6-linux.tar.gz
-          export PATH=$PATH:`pwd`/mopac-22.0.6-linux/bin
+          export PATH=$PATH:$HOME/mopac-22.0.6-linux/bin
 
-      - name: check mopac path
+      - name: Check which mopac
         run: which mopac
 
       - name: Install buildcell
