--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -91,10 +91,13 @@ jobs:
         run: |
           wget https://github.com/openmopac/mopac/releases/download/v22.0.6/mopac-22.0.6-linux.tar.gz
           tar -xzvf mopac-22.0.6-linux.tar.gz
-          export PATH=$PATH:$HOME/mopac-22.0.6-linux/bin
+          export PATH=$PATH:$HOME/mopac-22.0.6-linux/bin/
 
-      - name: Check which mopac
+      - name: check pip path
         run: which pip
+      
+      - name: check mopac path
+        run: which mopac
 
       - name: Install buildcell
         run: |
