--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -91,16 +91,11 @@ jobs:
         run: |
           wget https://github.com/openmopac/mopac/releases/download/v22.0.6/mopac-22.0.6-linux.tar.gz
           tar -xzvf mopac-22.0.6-linux.tar.gz
-          export PATH=$PATH:$HOME/mopac-22.0.6-linux/bin/
+          echo 'ASE_MOPAC_COMMAND="$HOME/mopac-22.0.6-linux/bin/mopac PREFIX.mop 2> /dev/null"' >> $GITHUB_ENV
 
-      - name: check pip path
-        run: which pip
+      - name: look at env variables
+        run: cat $GITHUB_ENV
 
-      - name: show path
-        run: echo $PATH      
-
-      - name: check mopac path
-        run: which mopac
 
       - name: Install buildcell
         run: |
