--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -41,6 +41,20 @@ jobs:
       - name: Install dependencies from pip (some will already be taken care of by conda's phonop3py and its dependencies)
         run: pip install wheel setuptools numpy scipy click matplotlib pandas pyyaml spglib rdkit-pypi flake8 pytest pytest-cov
 
+      - name: Install mopac from tarball 
+        run: |
+          wget https://github.com/openmopac/mopac/releases/download/v22.0.6/mopac-22.0.6-linux.tar.gz
+          tar -xzvf mopac-22.0.6-linux.tar.gz
+        env: 
+          ASE_MOPAC_COMMAND="$HOME/mopac-22.0.6-linux/bin/mopac PREFIX.mop 2> /dev/null"
+          # echo 'ASE_MOPAC_COMMAND="$HOME/mopac-22.0.6-linux/bin/mopac PREFIX.mop 2> /dev/null"' >> $GITHUB_PATH
+
+      - name: look at env variables
+        run: |
+          cat $GITHUB_PATH
+          echo "This is $ASE_MOPAC_COMMAND variable"
+
+
       - name: Install latest ASE from gitlab
         run: pip install git+https://gitlab.com/ase/ase.git
 
@@ -87,14 +101,7 @@ jobs:
         run: |
           sudo apt-get install --no-install-recommends quantum-espresso
 
-      - name: Install mopac from tarball 
-        run: |
-          wget https://github.com/openmopac/mopac/releases/download/v22.0.6/mopac-22.0.6-linux.tar.gz
-          tar -xzvf mopac-22.0.6-linux.tar.gz
-          echo 'ASE_MOPAC_COMMAND="$HOME/mopac-22.0.6-linux/bin/mopac PREFIX.mop 2> /dev/null"' >> $GITHUB_PATH
 
-      - name: look at env variables
-        run: cat $GITHUB_PATH
 
 
       - name: Install buildcell
