--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Install mopac from tarball 
         env: 
-          ASE_MOPAC_COMMAND="$HOME/mopac-22.0.6-linux/bin/mopac PREFIX.mop 2> /dev/null"
+          ASE_MOPAC_COMMAND: "$HOME/mopac-22.0.6-linux/bin/mopac PREFIX.mop 2> /dev/null"
         run: |
           wget https://github.com/openmopac/mopac/releases/download/v22.0.6/mopac-22.0.6-linux.tar.gz
           tar -xzvf mopac-22.0.6-linux.tar.gz
