Huge number of tiny changes to reduce number of flake8 warnings.
A couple more things ignored, and lots of tiny whitespace/line break
changes.

--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -178,7 +178,7 @@ jobs:
           # stop the build if there are Python syntax errors or undefined names
           flake8 wfl/ --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings.
-          flake8 wfl/ --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
+          flake8 wfl/ --count --exit-zero --max-complexity=20 --max-line-length=140 --ignore=E127,E128 --statistics
 
       - name: Test with pytest - plain
         if: env.coverage-on-version != matrix.python-version
