Update Esperesso-using tests with calculator_exec instead of old calculator_command

--- a/.github/workflows/pytests.yml
+++ b/.github/workflows/pytests.yml
@@ -42,7 +42,10 @@ jobs:
         run: pip install wheel setuptools numpy scipy click matplotlib pandas pyyaml spglib rdkit-pypi flake8 pytest pytest-cov
 
       - name: Install latest ASE from gitlab
-        run: pip install git+https://gitlab.com/ase/ase.git
+        run: |
+          pip install git+https://gitlab.com/ase/ase.git
+          echo -n "ASE VERSION "
+          python3 -c "import ase; print(ase.__file__, ase.__version__)"
 
       - name: Install intel-oneapi-mkl for phono3py
         run: |
